Fixed skip-to-content link shadow being slightly visible
Would cause a slight dark area in top left of view while hidden.

--- a/resources/sass/styles.scss
+++ b/resources/sass/styles.scss
@@ -138,7 +138,7 @@ $btt-size: 40px;
 
 .skip-to-content-link {
   position: fixed;
-  top: -$-xxl;
+  top: -52px;
   left: 0;
   background-color: #FFF;
   z-index: 15;
